[gd_scene load_steps=31 format=2]

[ext_resource path="res://World/tileset.png" type="Texture" id=1]
[ext_resource path="res://World/bg.png" type="Texture" id=2]
[ext_resource path="res://World/World.gd" type="Script" id=3]
[ext_resource path="res://World/Logs.tscn" type="PackedScene" id=4]
[ext_resource path="res://World/Rock.tscn" type="PackedScene" id=5]
[ext_resource path="res://World/heart_bar.png" type="Texture" id=6]
[ext_resource path="res://World/FoodItem.tscn" type="PackedScene" id=7]
[ext_resource path="res://World/fuel_bar.png" type="Texture" id=8]
[ext_resource path="res://World/food_bar.png" type="Texture" id=9]
[ext_resource path="res://World/fire.png" type="Texture" id=10]

[sub_resource type="TileSet" id=1]
0/name = "tileset.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 2304, 1792 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 255, Vector2( 0, 1 ), 219, Vector2( 0, 2 ), 507, Vector2( 0, 3 ), 176, Vector2( 0, 4 ), 178, Vector2( 0, 5 ), 50, Vector2( 0, 6 ), 48, Vector2( 1, 0 ), 63, Vector2( 1, 1 ), 16, Vector2( 1, 2 ), 504, Vector2( 1, 3 ), 184, Vector2( 1, 4 ), 186, Vector2( 1, 5 ), 58, Vector2( 1, 6 ), 56, Vector2( 2, 0 ), 447, Vector2( 2, 1 ), 438, Vector2( 2, 2 ), 510, Vector2( 2, 3 ), 152, Vector2( 2, 4 ), 154, Vector2( 2, 5 ), 26, Vector2( 2, 6 ), 24, Vector2( 3, 0 ), 432, Vector2( 3, 1 ), 446, Vector2( 3, 2 ), 54, Vector2( 3, 3 ), 144, Vector2( 3, 4 ), 146, Vector2( 3, 5 ), 18, Vector2( 4, 0 ), 506, Vector2( 4, 1 ), 511, Vector2( 4, 2 ), 191, Vector2( 4, 3 ), 248, Vector2( 4, 4 ), 59, Vector2( 4, 5 ), 182, Vector2( 4, 6 ), 434, Vector2( 5, 0 ), 216, Vector2( 5, 1 ), 251, Vector2( 5, 2 ), 27, Vector2( 5, 3 ), 440, Vector2( 5, 4 ), 62, Vector2( 5, 5 ), 155, Vector2( 5, 6 ), 218 ]
0/autotile/icon_coordinate = Vector2( 1, 1 )
0/autotile/tile_size = Vector2( 256, 256 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 150, 245 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 150, 0, 150, 245 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 300, 0, 150, 245 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 450, 0, 150, 245 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 600, 0, 150, 245 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 750, 0, 150, 245 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 900, 0, 150, 245 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1050, 0, 150, 245 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1200, 0, 150, 245 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 245, 150, 245 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 150, 245, 150, 245 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 300, 245, 150, 245 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 450, 245, 150, 245 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 600, 245, 150, 245 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 750, 245, 150, 245 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 900, 245, 150, 245 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1050, 245, 150, 245 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1200, 245, 150, 245 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[node name="World" type="Node2D"]
position = Vector2( 124.229, 101.723 )
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 12800, 7200 )

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 0.125, 0.125 )
tile_set = SubResource( 1 )
cell_size = Vector2( 256, 256 )
cell_quadrant_size = 128
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( -589827, 0, 196611, -524291, 0, 262147, -458755, 0, 262147, -524283, 0, 196611, -393224, 0, 196611, -393219, 0, 262147, -458747, 0, 262147, -327688, 0, 393220, -327687, 0, 5, -327683, 0, 262147, -393211, 0, 262147, -393209, 0, 393216, -393208, 0, 196609, -393207, 0, 393218, -262152, 0, 327684, -262151, 0, 262148, -262150, 0, 393217, -262149, 0, 393217, -262148, 0, 393217, -262147, 0, 327681, -262146, 0, 393217, -262145, 0, 196613, -327680, 0, 5, -327676, 0, 196608, -327675, 0, 327682, -327672, 0, 262147, -327667, 0, 196611, -196619, 0, 3, -196618, 0, 5, -196616, 0, 262147, -196609, 0, 65538, -262144, 0, 65541, -262143, 0, 393217, -262142, 0, 393217, -262141, 0, 393217, -262140, 0, 262146, -262136, 0, 393220, -262135, 0, 5, -262131, 0, 262147, -131083, 0, 131075, -131082, 0, 131077, -131080, 0, 262147, -131073, 0, 65538, -196608, 0, 65536, -196604, 0, 327683, -196600, 0, 327684, -196599, 0, 262148, -196598, 0, 393217, -196597, 0, 393217, -196596, 0, 393217, -196595, 0, 327682, -65544, 0, 327680, -65543, 0, 196610, -65538, 0, 3, -65537, 0, 131074, -131072, 0, 131072, -131071, 0, 5, -131064, 0, 262147, -7, 0, 393220, -6, 0, 131073, -5, 0, 131073, -4, 0, 131073, -3, 0, 131073, -2, 0, 131074, -1, 0, 65540, -65536, 0, 65540, -65535, 0, 131072, -65534, 0, 131073, -65533, 0, 131073, -65532, 0, 196612, -65531, 0, 393217, -65530, 0, 393217, -65529, 0, 393217, -65528, 0, 327682, 65527, 0, 196608, 65528, 0, 393217, 65529, 0, 262149, 65530, 0, 1, 65531, 0, 1, 65532, 0, 1, 65533, 0, 1, 65534, 0, 2, 65535, 0, 65540, 0, 0, 65540, 1, 0, 0, 2, 0, 1, 3, 0, 1, 4, 0, 327685, 131060, 0, 196611, 131063, 0, 262147, 131070, 0, 131075, 131071, 0, 2, 65536, 0, 0, 65537, 0, 131077, 65540, 0, 262147, 65543, 0, 3, 65544, 0, 5, 196596, 0, 262147, 196599, 0, 262147, 196601, 0, 196608, 196602, 0, 393217, 196603, 0, 393217, 196604, 0, 196610, 196607, 0, 65538, 131072, 0, 65536, 131076, 0, 262147, 131078, 0, 3, 131079, 0, 131074, 131080, 0, 131072, 131081, 0, 5, 262132, 0, 393220, 262133, 0, 5, 262135, 0, 262147, 262137, 0, 262147, 262140, 0, 262147, 262143, 0, 65538, 196608, 0, 65536, 196612, 0, 262147, 196614, 0, 131075, 196615, 0, 1, 196616, 0, 1, 196617, 0, 131077, 327668, 0, 131075, 327669, 0, 262148, 327670, 0, 196613, 327671, 0, 393221, 327673, 0, 393220, 327674, 0, 131073, 327675, 0, 196612, 327676, 0, 327681, 327677, 0, 393217, 327678, 0, 196609, 327679, 0, 262149, 262144, 0, 131077, 262148, 0, 262147, 393206, 0, 131075, 393207, 0, 131077, 393209, 0, 131075, 393210, 0, 2, 393211, 0, 65536, 393214, 0, 262147, 327682, 0, 393216, 327683, 0, 196609, 327684, 0, 327681, 327685, 0, 393217, 327686, 0, 393217, 327687, 0, 393217, 327688, 0, 393217, 327689, 0, 393217, 327690, 0, 393218, 458746, 0, 131075, 458747, 0, 131077, 458750, 0, 262147, 393219, 0, 262147, 524286, 0, 327683, 458755, 0, 262147, 524291, 0, 262147, 589827, 0, 327683, 68223215, 0, 327684 )

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="0" type="Position2D" parent="SpawnPoints"]
position = Vector2( -40, 0 )

[node name="1" type="Position2D" parent="SpawnPoints"]
position = Vector2( 0, -40 )

[node name="2" type="Position2D" parent="SpawnPoints"]
position = Vector2( 0, 40 )

[node name="3" type="Position2D" parent="SpawnPoints"]
position = Vector2( 40, 0 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.0886688
margin_right = 0.0886841
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FuelBar" type="TextureProgress" parent="CanvasLayer/Control"]
anchor_left = 0.5
anchor_right = 1.0
margin_left = 32.0
margin_right = 960.0
margin_bottom = 128.0
rect_scale = Vector2( 0.1, 0.1 )
step = 0.005
value = 100.0
texture_progress = ExtResource( 8 )
fill_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FoodBar" type="TextureProgress" parent="CanvasLayer/Control"]
anchor_left = 0.00713121
anchor_top = 0.108587
anchor_right = 0.00713121
anchor_bottom = 0.108587
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.1, 0.1 )
step = 0.01
value = 100.0
texture_progress = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HealthBar" type="TextureProgress" parent="CanvasLayer/Control"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.2, 0.2 )
value = 100.0
texture_progress = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FuelBurnTimer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="FoodConsumptionTimer" type="Timer" parent="."]
wait_time = 0.01
autostart = true

[node name="Resources" type="Node2D" parent="."]

[node name="FoodItem" parent="Resources" instance=ExtResource( 7 )]
position = Vector2( -38.7954, -141.507 )

[node name="FoodItem2" parent="Resources" instance=ExtResource( 7 )]
position = Vector2( 20.9584, -145.817 )

[node name="FoodItem3" parent="Resources" instance=ExtResource( 7 )]
position = Vector2( -0.282379, -81.6153 )

[node name="FoodItem4" parent="Resources" instance=ExtResource( 7 )]
position = Vector2( 39.4509, -34.9588 )

[node name="FoodItem5" parent="Resources" instance=ExtResource( 7 )]
position = Vector2( 16.2732, -109.76 )

[node name="FoodItem6" parent="Resources" instance=ExtResource( 7 )]
position = Vector2( -51.6045, -44.8922 )

[node name="FoodItem7" parent="Resources" instance=ExtResource( 7 )]
position = Vector2( -87.7257, -125.111 )

[node name="Logs" parent="Resources" instance=ExtResource( 4 )]
position = Vector2( 73.2863, -46.4126 )

[node name="YSort" type="YSort" parent="."]

[node name="Rock" parent="YSort" instance=ExtResource( 5 )]
position = Vector2( 86.4331, -17.9874 )

[node name="Players" type="YSort" parent="YSort"]

[node name="Node2D" type="Node2D" parent="YSort"]

[node name="Fire" type="AnimatedSprite" parent="YSort/Node2D"]
position = Vector2( 0, -13.6756 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 20 )
frame = 5
playing = true
[connection signal="timeout" from="FuelBurnTimer" to="." method="_on_FuelBurnTimer_timeout"]
[connection signal="timeout" from="FoodConsumptionTimer" to="." method="_on_FoodConsumptionTimer_timeout"]